# RetailCortex

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  turbo.json
.claude/skills/: elasticsearch-onboarding
.github/workflows/: backend-docker.yml
app/: package-lock.json  package.json
app/src/: global.css
app/src/app/: _layout.tsx
app/src/components/: animated-icon.web.tsx  (+7 more)
backend/: debug_store_query.py  package.json  pyproject.toml  run_uvicorn.py  seed.py
backend/migrations/models/: 0_20260603153926_init.py  2_20260604040317_add_user_store.py  4_20260604132623_add_user_notifications.py
backend/src/: config.py  main.py
backend/src/agent/: server.py
backend/src/api/: __init__.py  deps.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/routes/: __init__.py  agent.py  history.py  notifications.py  operations.py  stores.py  users.py
backend/src/api/v1/routes/store/: __init__.py  products.py
backend/src/core/: __init__.py  clerk.py
backend/src/db/: __init__.py  connection.py
backend/src/db/models/: __init__.py  activity.py  base.py  congestion.py  facility.py  notification.py  product.py  promotion.py  store.py  user.py  zone.py
backend/src/integrations/: dynatrace.py  elastic.py
backend/src/models/: __init__.py  activity.py  notification.py  operations.py  product.py  response.py  user.py
frontend/: .npmrc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
frontend/src/: proxy.ts
infra/: main.tf  outputs.tf  variables.tf
(+25 files in other folders)
