[project]
name = "retailcortex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "tortoise-orm[asyncpg]>=0.21.0",
    "aerich>=0.7.0",
    "tomlkit>=0.15.0",
    "mcp>=1.27.2",
    "elasticsearch>=9.4.1",
]

[tool.aerich]
tortoise_orm = "src.db.connection.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
